# mani

./: LICENSE  README.md  pyproject.toml  sim.py
simulation/: README.md  scene.xml  scene_fr3_orca.xml  scene_orca.xml
simulation/assets/mjcf/: sim_options.xml
simulation/assets/mjcf/right/collision/: right_collision_index_pp.stl  right_collision_index_pp_skin.stl  right_collision_middle_pp.stl  right_collision_middle_pp_skin.stl  right_collision_palm.stl  right_collision_palm_skin.stl  right_collision_pinky_ip.stl  right_collision_ring_ip_skin.stl  right_collision_ring_mp.stl  right_collision_thumb_dp.stl  right_collision_thumb_dp_skin.stl  right_collision_thumb_ip.stl  right_collision_thumb_ip_skin.stl  right_collision_thumb_mp.stl  right_collision_thumb_pp.stl  right_collision_tower_camera.stl  right_collision_tower_fans.stl  right_collision_tower_hull.stl  right_collision_tower_main.stl  right_collision_tower_text.stl  right_collision_tower_u2d2.stl
simulation/assets/mjcf/right/visual/: right_visual_index_pp.stl  right_visual_index_pp_skin.stl  right_visual_middle_ip_skin.stl  right_visual_middle_mp.stl  right_visual_palm.stl  right_visual_palm_skin.stl  right_visual_pinky_ip.stl  right_visual_pinky_pp.stl  right_visual_pinky_pp_skin.stl  right_visual_ring_pp.stl  right_visual_ring_pp_skin.stl  right_visual_thumb_dp.stl  right_visual_thumb_dp_skin.stl  right_visual_thumb_mp.stl  right_visual_thumb_pp.stl  right_visual_tower_camera.stl  (+5 more)
simulation/models/mjcf/: fr3.xml  orcahand_right_free.mjcf  orcahand_right_mountable.mjcf
src/: control.py  data.py
